# Prak2020

./: .gitmodules  lasertag.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/lib/pkgconfig/: nikolaus.pc  obstacle_detect.pc
devel/share/nikolaus/cmake/: nikolausConfig.cmake
devel/share/obstacle_detect/cmake/: obstacle_detectConfig.cmake
nikolaus/: package.xml
obstacle_detect/: CMakeLists.txt  package.xml
rpc_game_client/: .gitignore  CMakeLists.txt  package.xml
rpc_game_client/data/: rpc_tags.tex
rpc_game_client/launch/: game_client.launch
rpc_game_client/msg/: Alive.msg  GameState.msg  Score.msg
rpc_game_client/scripts/: game_client.py
rpc_game_client/srv/: ClientScore.srv  PlayerScore.srv
src/nikolaus/: CMakeLists.txt
src/nikolaus/scripts/: drawhouse.py
src/obstacle_detect/launch/: labor_navigation.launch
src/obstacle_detect/maps/: labor.yaml
src/obstacle_detect/src/: move_between.py  obstacle_detect.py
